feat(classifier): implemented formula and clause classifier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -779,6 +779,8 @@ set(VAMPIRE_SOURCES
     ${VAMPIRE_SAT_SUBSUMPTION_SOURCES}
     Forwards.hpp
     "${CMAKE_CURRENT_BINARY_DIR}/version.cpp"
+    FlutedFragment/Classifier.hpp
+    FlutedFragment/Classifier.cpp
     )
 
 ################################################################
